fixing background image on mobile by TEST removing FIXED from css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@ body {
   background-image: url("background1.jpg");
 	width: 100%;
 	height: 100%;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   margin: 0;
   padding: 0;
 }
